Update refs to my repo

--- a/src/templates/_components/fields/settings.twig
+++ b/src/templates/_components/fields/settings.twig
@@ -6,6 +6,7 @@
  * Translator Field Settings
  *
  * @author    Jan D'Hollander
+ * @folk      Sam Walker
  * @copyright Copyright (c) 2019 Jan D'Hollander
  * @link      https://www.thebasement.be/
  * @package   Translator
@@ -16,7 +17,7 @@
 {% import "_includes/forms" as forms %}
 
 
-{% do view.registerAssetBundle("jandh\\translator\\assetbundles\\translatorfield\\TranslatorAsset") %}
+{% do view.registerAssetBundle("circa1983\\translator\\assetbundles\\translatorfield\\TranslatorAsset") %}
 
 
 {% set field = {
